# goctl-c

./: dev.bat  go.mod  go.sum  goctl-c.go  readme.md
action/: action.go
example/: .gitignore  gen.bat
example/client/: CMakeLists.txt
example/client/cmake/: cJSON.cmake  curl.cmake
example/client/demo/: CMakeLists.txt  main.c
example/server/: demo.go  go.mod
example/server/internal/handler/: demohandler.go  routes.go
example/server/internal/logic/: demologic.go
example/server/internal/svc/: servicecontext.go
generate/: cjson.go  client.go  cmd.go  message.go  vars.go
template/: api_client_c.tpl  common.go
